--- a/main.htm
+++ b/main.htm
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>小说网</title>
-    <link rel="stylesheet" href="./前端/css/homePage.css">
+    <link rel="stylesheet" href="./front-end/css/homePage.css">
 </head>
 <body>
     <div class="wrapper">
         <div class="navigate">
             <!-- 导航栏显示网站logo、书籍搜索框、登录注册按钮 -->
-            <img src="./前端/images/logo.jpg" alt="" class="logo">
+            <img src="./front-end/images/logo.jpg" alt="" class="logo">
             <div>
                 <input type="text" placeholder="请输入想要查找的书籍">
-                <img src="./前端/images/search.png" alt="" class="search">
+                <img src="./front-end/images/search.png" alt="" class="search">
                 <!-- 当点击搜索按钮之后应该触发Ajax -->
             </div>
             <a href="javascript:;">
@@ -101,7 +101,7 @@
             </div>
         </div>
     </div>
-    <script src="./前端/js/jquery-3.4.1.js"></script>
-    <script src="./前端/js/homePage.js"></script>
+    <script src="./front-end/js/jquery-3.4.1.js"></script>
+    <script src="./front-end/js/homePage.js"></script>
 </body>
 </html>
