--- a/front-end/html/main.htm
+++ b/front-end/html/main.htm
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>小说网</title>
-    <link rel="stylesheet" href="./front-end/css/homePage.css">
+    <link rel="stylesheet" href="../css/homePage.css">
 </head>
 <body>
     <div class="wrapper">
         <div class="navigate">
             <!-- 导航栏显示网站logo、书籍搜索框、登录注册按钮 -->
-            <img src="./front-end/images/logo.jpg" alt="" class="logo">
+            <img src="../images/logo.jpg" alt="" class="logo">
             <div>
                 <input type="text" placeholder="请输入想要查找的书籍">
-                <img src="./front-end/images/search.png" alt="" class="search">
+                <img src="../images/search.png" alt="" class="search">
                 <!-- 当点击搜索按钮之后应该触发Ajax -->
             </div>
-            <a href="http://127.0.0.1:5000/">
+            <a href="127.0.0.1:5000/login">
                 <svg t="1573635053515" class="personal" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="5907" width="200" height="200"><path d="M575.215 547.318c53.367-24.316 90.562-78.011 90.562-140.522 0-85.257-69.149-154.383-154.406-154.383-85.299 0-154.427 69.126-154.427 154.383 0 62.49 37.172 116.185 90.562 140.522-87.156 27.24-150.586 108.698-150.586 204.715 0 12.071 9.779 21.827 21.827 21.827s21.827-9.756 21.827-21.827c0-94.161 76.613-170.774 170.776-170.774 94.184 0 170.797 76.613 170.797 170.774 0 12.071 9.756 21.827 21.827 21.827 12.07 0 21.827-9.756 21.827-21.827 0.021-95.994-63.43-177.475-150.586-204.715zM400.621 406.817c0-61.072 49.678-110.729 110.773-110.729 61.072 0 110.75 49.657 110.75 110.729 0 61.094-49.678 110.794-110.75 110.794-61.095 0-110.773-49.7-110.773-110.794z" p-id="5908" data-spm-anchor-id="a313x.7781069.0.i2" class="selected" fill="#8a8a8a"></path><path d="M511.371 960.81c-246.951 0-447.869-200.918-447.869-447.891 0-246.93 200.919-447.871 447.869-447.871 246.973 0 447.892 200.919 447.892 447.871 0 246.973-200.919 447.891-447.892 447.891z m0-854.269c-224.098 0-406.398 182.301-406.398 406.377s182.3 406.397 406.398 406.397c224.099 0 406.42-182.321 406.42-406.397S735.47 106.541 511.371 106.541z" p-id="5909" data-spm-anchor-id="a313x.7781069.0.i3" class="selected" fill="#8a8a8a"></path></svg>
             </a>
             
@@ -25,7 +25,7 @@
         
 
     </div>
-    <script src="./front-end/js/jquery-3.4.1.js"></script>
-    <script src="./front-end/js/homePage.js"></script>
+    <script src="../js/jquery-3.4.1.js"></script>
+    <script src="../js/homePage.js"></script>
 </body>
 </html>
